[package]
name = "complexity"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Calculate cognitive complexity of Rust code."
readme = "README.md"
homepage = "https://github.com/rossmacarthur/complexity"
repository = "https://github.com/rossmacarthur/complexity"
license = "MIT OR Apache-2.0"
keywords = ["cognitive", "complexity", "lint"]
categories = ["development-tools"]

[dependencies]
syn = { version = "1", features = ["full"] }
